--- a/iris_px4_standoff_demo_cam1/model.config
+++ b/iris_px4_standoff_demo_cam1/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Iris px4 with mav14570 cam</name>
+  <name>Iris px4 with mav14570 cam 1</name>
   <version>1.0</version>
   <sdf version="1.6">model.sdf</sdf>
 
