camera sensor resolution double for gimbal_small_2d_px_1

--- a/gimbal_small_2d_px4/model.config
+++ b/gimbal_small_2d_px4/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>Gimbal Small 2D px4</name>
+    <name>Gimbal Small 2D px4 - test</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
